# py-ffmpeg

./: .gitignore  pyproject.toml
examples/: encoder-cli.py  encoder-pyside6-mini.py  encoder-pyside6.py  pyencoder.py
pyi-specs/: mini-encoder.darwin.spec
src/py_ffmpeg/: __init__.py  config.py  context.py  encoder.py  ffprobe.py  media_info.py  qthreads.py
